--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- NAVEGADOR -->
   <header class="header">
     <div class="logo">
-      <img src="/models/logo.svg" alt="">
+      <img src="models/logo.svg" alt="">
       <!-- <svg height="35" viewBox="0 0 512 512" width="35">
         <g>
           <path
